[gd_scene load_steps=14 format=1]

[ext_resource path="res://scripts/mainmenu.gd" type="Script" id=1]
[ext_resource path="res://resources/sprites/gui/mainmenu/NewGameNormal.png" type="Texture" id=2]
[ext_resource path="res://resources/sprites/gui/mainmenu/NewGameClicked.png" type="Texture" id=3]
[ext_resource path="res://resources/sprites/gui/mainmenu/NewGameHover.png" type="Texture" id=4]
[ext_resource path="res://resources/sprites/gui/mainmenu/LoadGameNormal.png" type="Texture" id=5]
[ext_resource path="res://resources/sprites/gui/mainmenu/LoadGameClicked.png" type="Texture" id=6]
[ext_resource path="res://resources/sprites/gui/mainmenu/LoadGameHover.png" type="Texture" id=7]
[ext_resource path="res://resources/sprites/gui/mainmenu/OptionsNormal.png" type="Texture" id=8]
[ext_resource path="res://resources/sprites/gui/mainmenu/OptionsClicked.png" type="Texture" id=9]
[ext_resource path="res://resources/sprites/gui/mainmenu/OptionsHover.png" type="Texture" id=10]
[ext_resource path="res://resources/sprites/gui/mainmenu/QuitNormal.png" type="Texture" id=11]
[ext_resource path="res://resources/sprites/gui/mainmenu/QuitPressed.png" type="Texture" id=12]
[ext_resource path="res://resources/sprites/gui/mainmenu/QuitHover.png" type="Texture" id=13]

[node name="MainMenu" type="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 600.0
script/script = ExtResource( 1 )

[node name="Base" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = -2.0
margin/right = 1025.0
margin/bottom = 598.0
alignment = 0

[node name="NewGame" type="TextureButton" parent="Base"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 412.0
margin/top = 28.0
margin/right = 612.0
margin/bottom = 118.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 2 )
textures/pressed = ExtResource( 3 )
textures/hover = ExtResource( 4 )
params/scale = Vector2( 0.5, 0.5 )

[node name="Continue" type="TextureButton" parent="Base"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 412.0
margin/top = 179.0
margin/right = 612.0
margin/bottom = 269.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
textures/hover = ExtResource( 7 )
params/scale = Vector2( 0.5, 0.5 )

[node name="Settings" type="TextureButton" parent="Base"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 412.0
margin/top = 330.0
margin/right = 612.0
margin/bottom = 420.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
textures/pressed = ExtResource( 9 )
textures/hover = ExtResource( 10 )
params/scale = Vector2( 0.5, 0.5 )

[node name="Exit" type="TextureButton" parent="Base"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 412.0
margin/top = 481.0
margin/right = 612.0
margin/bottom = 571.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 11 )
textures/pressed = ExtResource( 12 )
textures/hover = ExtResource( 13 )
params/scale = Vector2( 0.5, 0.5 )

[node name="SettingsMenu" type="VBoxContainer" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 600.0
alignment = 0

[node name="WindowSize" type="OptionButton" parent="SettingsMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 492.0
margin/top = 139.0
margin/right = 531.0
margin/bottom = 159.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="Back" type="Button" parent="SettingsMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 506.0
margin/top = 441.0
margin/right = 518.0
margin/bottom = 461.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[connection signal="pressed" from="Base/NewGame" to="." method="_on_NewGame_pressed"]

[connection signal="pressed" from="Base/Continue" to="." method="_on_Continue_pressed"]

[connection signal="pressed" from="Base/Settings" to="." method="_on_Settings_pressed"]

[connection signal="pressed" from="Base/Exit" to="." method="_on_Exit_pressed"]

[connection signal="item_selected" from="SettingsMenu/WindowSize" to="." method="_on_WindowSize_item_selected"]

[connection signal="pressed" from="SettingsMenu/Back" to="." method="_on_Back_pressed"]


